# timeline-generator-mcp

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  generate_examples.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/: company_history.toon  company_history.yaml  dense_timeline.yaml  personal_goals.yaml  product_roadmap.yaml  project_timeline.toon  project_timeline.yaml  sprint_gantt.toon  sprint_gantt.yaml
tests/: __init__.py  conftest.py  test_models.py  test_parser.py  test_scale.py
timeline_generator/: __init__.py  cli.py  fastmcp_server.py  mcp_server.py  models.py  parser.py
timeline_generator/animation/: __init__.py  builder.py  effects.py
timeline_generator/core/: __init__.py  layout.py  scale.py
timeline_generator/mcp/: __init__.py  tools.py
timeline_generator/output/: __init__.py  image.py  video.py
timeline_generator/renderers/: __init__.py  base.py  gantt.py  horizontal.py  infographic.py  roadmap.py  vertical.py
timeline_generator/themes/: __init__.py  base.py  corporate.py  creative.py  dark.py  minimal.py
